--- a/theme/renexmoe.html
+++ b/theme/renexmoe.html
@@ -28,7 +28,7 @@
   }
 
   .mdui-shadow-3 {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(42, 190, 234, 0.2);
   }
 </style>
 <script>
@@ -46,7 +46,7 @@
   }
 
   .mdui-shadow-3 {
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(42, 190, 234, 0.2);
   }
 </style>
 <script>
@@ -162,7 +162,7 @@
 <!--MultiDiskAreaEnd-->
 
     <a
-      href="https://github.com/qkqpttgf/OneManager-php"
+      href="https://github.com/hang2048"
       class="mdui-list-item mdui-ripple"
       ><i class="mdui-list-item-icon mdui-icon material-icons">code</i>
       <div class="mdui-list-item-content">Github</div>
@@ -228,7 +228,7 @@
   <br />
   <center>
     <div class="mdui-typo-title">
-      这是一个受保护的文件夹，您需要提供访问密码才能查看。
+      文件夹受保护，请提供访问密码！
     </div>
   </center>
   <form action="" method="post">
