--- a/theme/renexmoe.html
+++ b/theme/renexmoe.html
@@ -28,7 +28,7 @@
   }
 
   .mdui-shadow-3 {
-    background: rgba(229, 190, 234, 0.2);
+    background: rgba(229, 190, 234, 0.9);
   }
 </style>
 <script>
@@ -46,7 +46,7 @@
   }
 
   .mdui-shadow-3 {
-    background: rgba(203, 208, 234, 0.2);
+    background: rgba(203, 208, 234, 0.9);
   }
 </style>
 <script>
@@ -165,7 +165,7 @@
       href="https://github.com/hang2048"
       class="mdui-list-item mdui-ripple"
       ><i class="mdui-list-item-icon mdui-icon material-icons">code</i>
-      <div class="mdui-list-item-content">Github</div>
+      <div class="mdui-list-item-content">GitHub-or-GayHub</div>
     </a>
     <li
       class="mdui-list-item mdui-ripple"
@@ -173,7 +173,7 @@
       id="about_theme"
     >
       <i class="mdui-list-item-icon mdui-icon material-icons">info</i>
-      <div class="mdui-list-item-content">关于该主题</div>
+      <div class="mdui-list-item-content">关于主题</div>
     </li>
   </div>
 </div>
